This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2023-03-17:

- Fixed nameref self-reference loop detection; as of ksh 93u 2010-11-22, this
  failed for loops of more than two refs. For example, 'nameref a=b b=c c=a'
  now correctly outputs an 'invalid self reference' error message.

2023-03-16:

- Backported a fix from ksh 93v- beta for a bug in the 'for' loop optimizer
  which could falsely treat 'typeset -b' variables as loop invariants.

2023-03-04:

- Fixed a bug introduced on 2022-02-08 that caused string translation using
  $"..." to either crash or fail silently.

2023-03-03:

- A new SHOPT_SCRIPTONLY compile-time option was added that, if enabled,
  compiles out the interactive shell, resulting in a ksh binary that can
  only run scripts. See src/cmd/ksh93/README for more information.

2023-02-23:

- Fixed a crash or corrupted output that occurred on some systems if the vi
  '.' repeater command was used immediately after starting ksh in vi mode.

- In vi mode, when navigating back in the command history and then editing a
  line from the history, the U command now correctly undoes the latest edit
  to the history line instead of jumping back to the current command line.

- In vi mode, issuing the v command from a completely empty line now invokes
  the full editor with an empty file instead of beeping.

- Fixed a bug in vi mode where the v command from a line with only whitespace
  resulted in an "invalid range" hist error and the editor failed to open.

- Fixed a bug in emacs mode where calling the full editor saved the current
  command line to the history file without a terminating newline.

- Fixed a bug in emacs and vi modes where navigating to a null or empty
  history line displays an empty line onscreen.

- Fixed a bug in emacs and vi modes where attempting to tab-complete an