@@ -2,7 +2,7 @@
 #                                                                      #
 #               This software is part of the ast package               #
 #          Copyright (c) 1982-2012 AT&T Intellectual Property          #
-#          Copyright (c) 2020-2022 Contributors to ksh 93u+m           #
+#          Copyright (c) 2020-2023 Contributors to ksh 93u+m           #
 #                      and is licensed under the                       #
 #                 Eclipse Public License, Version 2.0                  #
 #                                                                      #
@@ -1562,6 +1562,14 @@ exp=3,[a/-/b]
 [[ $got == "$exp" ]] || err_exit "Field-split fallback string containing brackets and a dash" \
 	"(expected $(printf %q "$exp"), got $(printf %q "$got"))"
 IFS=$' \t\n'  # restore default
+
+# ======
+# 'read' mistakenly parsed assignment-arguments instead of variable names
+# https://github.com/ksh93/ksh/issues/606#issuecomment-1474858962
+exp=': read: foo=bar: invalid variable name'
+got=$(set +x; { read foo=bar; } <<<baz 2>&1)
+[[ e=$? -eq 1 && $got == *"$exp" ]] || err_exit 'read foo=bar' \
+	"(expected status 1, *$(printf %q "$exp"); got status $e, $(printf %q "$got"))"
 
 # ======
 exit $((Errors<125?Errors:125))
